added new inovice controller

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGODB_URI = "mongodb+srv://user:mongodbuser@cluster0.hwpnv2w.mongodb.net/mern_
 JWT_SECRET_KEY = RENTALWEBSITE
 SECRET= Opx50v2vfNVWm3X3QdwnsC5d
 KEYID= rzp_test_lTwMKZcBHwhvuK
+EMAIL_USER=renteasy312@gmail.com
+EMAIL_PASS=sney zhwc gqwo rmvz
